[tool.poetry]
name = "pyeggs"
version = "0.1.0"
description = "A playful example of how a malicious dependency can hijack a process."
authors = ["jman420 <jman.giannone@gmail.com>"]
license = "MIT"
packages = [
  { include = "pyeggs" }
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
