[metadata]
name = pyeggs
author = jman420
author_email = jman.giannone@gmail.com
description = Hidden Easter Eggs for Python Console Apps
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Jman420/pyeggs
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[files]
packages = pyeggs

[options]
python_requires = >=3.8
